test/forgetCapture4.slq
def main(){
	x:=H(0);
	def f() ⇒ x;
	forget(f); /// error
}
